--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,1 @@
-*.py[co]
-
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-
-#Translations
-*.mo
-
-#Mr Developer
-.mr.developer.cfg
-
-# Tex files
-book/book.aux
-book/book.idx
-book/book.ilg
-book/book.ind
-book/book.log
-book/book.out
-book/book.toc
-
-# pdf
-book/thinkpython2-spanish.pdf
+internal
